@@ -1,23 +1,25 @@
 package com.mgen256.al.blocks;
 
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.WallTorchBlock;
+import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.*;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.particles.ParticleOptions;
+import net.minecraft.core.particles.ParticleTypes;
+import net.minecraftforge.common.util.Constants.BlockFlags;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.StateDefinition;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.storage.loot.LootContext;
+import net.minecraft.world.phys.shapes.CollisionContext;
+import net.minecraft.world.phys.shapes.VoxelShape;
+import net.minecraft.client.renderer.ItemBlockRenderTypes;
 import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.renderer.RenderTypeLookup;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.item.BlockItem;
-import net.minecraft.item.ItemStack;
-import net.minecraft.loot.LootContext;
-import net.minecraft.particles.IParticleData;
-import net.minecraft.particles.ParticleTypes;
-import net.minecraft.state.StateContainer;
-import net.minecraft.util.Direction;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.shapes.ISelectionContext;
-import net.minecraft.util.math.shapes.VoxelShape;
-import net.minecraft.world.IBlockReader;
-import net.minecraft.world.World;
+import net.minecraft.world.item.BlockItem;
+import net.minecraft.world.item.ItemStack;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -26,18 +28,17 @@ import java.util.Random;
 
 import javax.annotation.Nullable;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 import com.mgen256.al.*;
 import com.mgen256.al.items.SoulWand;
 
 public class ALTorch_Wall extends WallTorchBlock implements IModBlock, IHasFire {
     
-    private static final Map<Direction, VoxelShape> SHAPES = Maps.newEnumMap( ImmutableMap.of( 
-        Direction.NORTH, Block.makeCuboidShape(5.5D, 2.0D, 11.0D, 10.5D, 13.0D, 16.0D), 
-        Direction.SOUTH, Block.makeCuboidShape(5.5D, 2.0D, 0.0D, 10.5D, 13.0D, 5.0D), 
-        Direction.WEST, Block.makeCuboidShape(11.0D, 2.0D, 5.5D, 16.0D, 13.0D, 10.5D), 
-        Direction.EAST, Block.makeCuboidShape(0.0D, 2.0D, 5.5D, 5.0D, 13.0D, 10.5D)) );
+    private static final Map<Direction, VoxelShape> SHAPES = Maps.newEnumMap( Map.of( 
+        Direction.NORTH, Block.box(5.5D, 2.0D, 11.0D, 10.5D, 13.0D, 16.0D), 
+        Direction.SOUTH, Block.box(5.5D, 2.0D, 0.0D, 10.5D, 13.0D, 5.0D), 
+        Direction.WEST, Block.box(11.0D, 2.0D, 5.5D, 16.0D, 13.0D, 10.5D), 
+        Direction.EAST, Block.box(0.0D, 2.0D, 5.5D, 5.0D, 13.0D, 10.5D)) );
 
          
     public ALTorch_Wall(Block mainblock, ModBlockList _floorKey ) {
@@ -45,10 +46,10 @@ public class ALTorch_Wall extends WallTorchBlock implements IModBlock, IHasFire 
 
         name = "al_wall_torch_" + mainblock.getRegistryName().getPath();
         floorKey = _floorKey;
-        setDefaultState( stateContainer.getBaseState()
-            .with( HORIZONTAL_FACING, Direction.NORTH )
-            .with( FIRE_TYPE, FireTypes.NORMAL ) 
-            .with( PREVIOUS_FIRE_TYPE, FireTypes.NORMAL ) );
+        registerDefaultState( stateDefinition.any()
+            .setValue( BlockStateProperties.HORIZONTAL_FACING, Direction.NORTH )
+            .setValue( FIRE_TYPE, FireTypes.NORMAL ) 
+            .setValue( PREVIOUS_FIRE_TYPE, FireTypes.NORMAL ) );
     }
 
     private ModBlockList floorKey;
@@ -60,14 +61,14 @@ public class ALTorch_Wall extends WallTorchBlock implements IModBlock, IHasFire 
     }
 
     @Override
-    protected void fillStateContainer(StateContainer.Builder<Block, BlockState> builder) {
-        super.fillStateContainer(builder);
+    protected void createBlockStateDefinition(StateDefinition.Builder<Block, BlockState> builder) {
+        super.createBlockStateDefinition(builder);
         builder.add( FIRE_TYPE );
         builder.add( PREVIOUS_FIRE_TYPE );
     }
 
     @Override
-    public String getName(){
+    public String getModRegistryName(){
         return name;
     }
 
@@ -75,46 +76,46 @@ public class ALTorch_Wall extends WallTorchBlock implements IModBlock, IHasFire 
     public BlockItem getBlockItem() {
         return null;
     }
-/*
+    
     @Override
-    public int getLightValue(BlockState state) {
-        return state.get( FIRE_TYPE ) == FireTypes.SOUL ? 10 : 14;
-     }
-*/
+    public int getLightEmission(BlockState state, BlockGetter world, BlockPos pos) {
+        return state.getValue( FIRE_TYPE ) == FireTypes.SOUL ? 10 : 14;
+    }
+
     @Override
     public boolean notRequireItemRegistration(){
         return true;
     }
 
     @Override
-    public VoxelShape getShape(BlockState state, IBlockReader worldIn, BlockPos pos, ISelectionContext context) {
+    public VoxelShape getShape(BlockState state, BlockGetter blockgetter, BlockPos pos, CollisionContext context) {
         return func_220289_j(state);
     }
 
     public static VoxelShape func_220289_j(BlockState p_220289_0_) {
-        return SHAPES.get(p_220289_0_.get(HORIZONTAL_FACING));
+        return SHAPES.get(p_220289_0_.getValue(BlockStateProperties.HORIZONTAL_FACING));
     }
  
     @Override
     public void setRenderLayer() {
-        RenderTypeLookup.setRenderLayer(this, name.contains("glass") ? RenderType.getCutout() : RenderType.getSolid() );
+        ItemBlockRenderTypes.setRenderLayer(this, name.contains("glass") ? RenderType.cutout() : RenderType.solid() );
     }
     
     @Override
-    public void animateTick(BlockState stateIn, World worldIn, BlockPos pos, Random rand) {
-        Direction direction = stateIn.get(HORIZONTAL_FACING);
-        double dx = (double)pos.getX() + 0.5D;
-        double dy = (double)pos.getY() + 0.9D;
-        double dz = (double)pos.getZ() + 0.5D;
+    public void animateTick(BlockState stateIn, Level level, BlockPos pos, Random rand) {
+        Direction direction = stateIn.getValue(BlockStateProperties.HORIZONTAL_FACING);
+        double dx = pos.getX() + 0.5D;
+        double dy = pos.getY() + 0.9D;
+        double dz = pos.getZ() + 0.5D;
   
         Direction direction1 = direction.getOpposite();
         double d3 = 0.38D;
-        worldIn.addParticle(ParticleTypes.SMOKE, dx + d3 * (double)direction1.getXOffset(), dy, dz + d3 * (double)direction1.getZOffset(), 0.0D, 0.0D, 0.0D);
+        level.addParticle(ParticleTypes.SMOKE, dx + d3 * direction1.getStepX(), dy, dz + d3 * direction1.getStepZ(), 0.0D, 0.0D, 0.0D);
 
-        IParticleData particleType;
-        particleType = stateIn.get( FIRE_TYPE ) == FireTypes.SOUL ? ParticleTypes.SOUL_FIRE_FLAME : ParticleTypes.FLAME;
+        ParticleOptions particleOption;
+        particleOption = stateIn.getValue( FIRE_TYPE ) == FireTypes.SOUL ? ParticleTypes.SOUL_FIRE_FLAME : ParticleTypes.FLAME;
             
-        worldIn.addParticle(particleType, dx + d3 * (double)direction1.getXOffset(), dy, dz + d3 * (double)direction1.getZOffset(), 0.0D, 0.0D, 0.0D);
+        level.addParticle(particleOption, dx + d3 * direction1.getStepX(), dy, dz + d3 * direction1.getStepZ(), 0.0D, 0.0D, 0.0D);
        }
 
     
@@ -128,8 +129,8 @@ public class ALTorch_Wall extends WallTorchBlock implements IModBlock, IHasFire 
     }
     
     @Override
-    public void onBlockPlacedBy(World worldIn, BlockPos pos, BlockState state, @Nullable LivingEntity placer, ItemStack stack) {
-        if( placer.getHeldItemOffhand().getItem() instanceof SoulWand )
-            worldIn.setBlockState( pos, state.with( FIRE_TYPE, FireTypes.SOUL ) );
+    public void setPlacedBy(Level level, BlockPos pos, BlockState state, @Nullable LivingEntity placer, ItemStack stack) {
+        if( placer.getOffhandItem().getItem() instanceof SoulWand )
+            level.setBlock( pos, state.setValue( FIRE_TYPE, FireTypes.SOUL ), BlockFlags.DEFAULT );
     }
 }
